exports[`test Normal radiobutton renders correctly 1`] = `
<label
  className="lui-radiobutton"
  htmlFor={undefined}>
  <input
    checked={true}
    className="lui-radiobutton__input"
    type="radio" />
  <div
    className="lui-radiobutton__radio-wrap">
    <span
      className="lui-radiobutton__radio" />
    <span
      className="lui-radiobutton__radio-text" />
  </div>
</label>
`;

exports[`test Radiobutton with modifiers renders correctly 1`] = `
<label
  className="lui-radiobutton lui-radiobutton--inverse"
  htmlFor={undefined}>
  <input
    checked={true}
    className="lui-radiobutton__input"
    type="radio" />
  <div
    className="lui-radiobutton__radio-wrap">
    <span
      className="lui-radiobutton__radio" />
    <span
      className="lui-radiobutton__radio-text" />
  </div>
</label>
`;

exports[`test Radiobutton with states renders correctly 1`] = `
<label
  className="lui-radiobutton lui-active"
  htmlFor={undefined}>
  <input
    checked={true}
    className="lui-radiobutton__input"
    disabled={true}
    type="radio" />
  <div
    className="lui-radiobutton__radio-wrap">
    <span
      className="lui-radiobutton__radio" />
    <span
      className="lui-radiobutton__radio-text" />
  </div>
</label>
`;
